-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.2, 6.0.0
-
None
-
fe66c20e49d5a2cce2cf544883c414f3e5166bda (qt/qtquick3d/6.0) 57e1219dda15ab22f7b9ce74ffcd768eea4c4eba (qt/qtquick3d/dev)
DefaultMaterial.NoLighting ignores opacity map. See the attached example application. Half of the object should be transparent regardless of lighting mode of the material.
For Gerrit Dashboard: QTBUG-89657 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
327960,1 | apply the OpacityMap effect regardless of the light condition | 6.0.0 | qt/qtquick3d | Status: ABANDONED | +2 | 0 |
327961,2 | apply the OpacityMap effect regardless of the light condition | 6.0 | qt/qtquick3d | Status: MERGED | +2 | 0 |
328051,3 | apply the OpacityMap effect regardless of the light condition | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |