apply the OpacityMap effect regardless of the light condition

When NoLight, opacityMap is ignored. With this patch, it will be handled
like the property 'opacity'

Fixes: QTBUG-89657
Pick-to: 6.0 6.0.0
Change-Id: I9675eb3afd27b2303da08afb37ccb3f787c8c2ec
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>